# voxel-rs

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  TEXTURES_LICENSE
assets/fonts/: list.toml
assets/shaders/: gui-rect.frag  gui-rect.vert  model.frag  model.vert  skybox.frag  skybox.vert  target.frag  target.vert  world.frag  world.vert  world_wireframe.frag
client/: Cargo.toml
client/config/: settings.toml
client/shader/: gui-rect.frag  gui-rect.vert  skybox.vert  world.vert  world_wireframe.frag
client/src/: fps.rs  input.rs  main.rs  mesh.rs  render.rs  settings.rs  singleplayer.rs  texture.rs  ui.rs  window.rs  world.rs
client/src/gui/: experiments.rs  mod.rs
client/src/model/: mod.rs  model.rs
client/src/physics/: aabb.rs  mod.rs
client/src/render/: buffers.rs  frustum.rs  init.rs  mod.rs  render.rs  ui.rs
client/src/render/chunk/: meshing.rs  meshing_worker.rs  mod.rs
client/src/render/world/: meshing.rs  meshing_worker.rs  mod.rs  model.rs  skybox.rs
client/src/ui/: mod.rs  renderer.rs  widgets.rs
client/src/world/: camera.rs  frustum.rs  meshing.rs  meshing_worker.rs  mod.rs  renderer.rs  skybox.rs
common/: Cargo.toml
common/src/: collections.rs  debug.rs  lib.rs  player.rs  registry.rs  time.rs  worker.rs  worker2.rs  world.rs
common/src/block/: mod.rs
common/src/data/: mod.rs
common/src/data/vox/: item.rs  mod.rs
common/src/item/: mod.rs
common/src/light/: mod.rs
common/src/ligth/: mod.rs
common/src/network/: dummy.rs  messages.rs  mod.rs
common/src/physics/: aabb.rs  camera.rs  mod.rs  player.rs  simulation.rs
common/src/world/: chunk.rs  mod.rs
common/src/worldgen/: decorator.rs  mod.rs  perlin.rs  topology.rs
data/blocks/: dirt.ron  dirt_grass.ron  grass.ron  leaves.ron  sand.ron  stone.ron  water.ron  wood.ron
data/items/: ingot_iron.ron
data/model/: tree.vox
network/: Cargo.toml
network/src/: channel.rs  client.rs  lib.rs  packet.rs  server.rs  socket.rs  types.rs
network/tests/: connection.rs  connection_loss.rs
network/tests/common/: mod.rs
quint/: Cargo.toml
quint/src/: event.rs  geometry.rs  layout.rs  lib.rs  size.rs  style.rs  ui.rs
server/: Cargo.toml
server/src/: lib.rs  light.rs  world.rs  worldgen.rs
server/src/light/: mod.rs  sunlight.rs  worker.rs
shader/: skybox.frag  world.frag  world.vert  world_wireframe.frag
src/: block.rs  chunk.rs  data.rs  fps.rs  input.rs  main.rs  mainmenu.rs  mesh.rs  meshing.rs  perlin.rs  physics.rs  registry.rs  settings.rs  singleplayer.rs  texture.rs  ui.rs  window.rs  world.rs
src/block/: mesh.rs
src/physic/: aabb.rs
src/physics/: aabb.rs
src/ui/: renderer.rs  widgets.rs
src/world/: camera.rs  chunk.rs  meshing.rs  mod.rs  renderer.rs  skybox.rs  transform.rs
