[workspace]
members = ["quint"]

[package]
name = "voxel-rs"
version = "0.1.0"
authors = ["Technici4n", "Azercoco"]
edition = "2018"

[dependencies]
# Utilities
anyhow = "1.0"
env_logger = "0.7"
log = "0.4"
ron = "0.5"
serde = "1.0"

# Graphics
gfx = "0.18"
gfx_core = "0.9"
gfx_device_gl = "0.16"
gfx_window_glutin = "0.31"
glutin = "0.21"
image = "0.22"
texture_packer = "0.17"

# Gui
gfx_glyph = "0.16"
quint = { path = "quint" }

# Math
nalgebra = "0.18"

[profile.release]
debug = true
