[package]
name = "voxel-rs-client"
version = "0.1.0"
authors = ["Technici4n", "Azercoco"]
edition = "2018"

[[bin]]
name = "client"
path = "./src/main.rs"

[dependencies]
# Voxel-rs
voxel-rs-common = { path = "../common" }
voxel-rs-server = { path = "../server" }

# Utilities
anyhow = "1.0"
env_logger = "0.7"
log = "0.4"
ron = "0.5"
serde = "1.0"
toml = "0.5"

# Graphics
image = "0.22"
texture_packer = "0.17"
wgpu = "0.4"
winit = "0.20.0-alpha4"

# Gui
quint = { path = "../quint" }
wgpu_glyph = "0.5"

# Math
nalgebra = "0.18"
