[package]
name = "voxel-rs-common"
version = "0.1.0"
authors = ["Technici4n", "Azercoco"]
edition = "2018"

[dependencies]
# Utilities
anyhow = "1.0"
crossbeam-channel = "0.5"
lazy_static = "1.4.0"
log = "0.4"
ron = "0.6"
serde = "1.0"

# Image loading
image = "0.23"
texture_packer = "0.21"

# Math
nalgebra = "0.23"
